manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: levelupdevops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: levelupdevops
  template:
    metadata:
      labels:
        app: levelupdevops
        version: IMAGE_LABEL
    spec:
      containers:
      - name: levelupdevops
        image: ACR_URL/levelupdevops:IMAGE_LABEL
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 5000
