manifests/service.yaml


apiVersion: v1
kind: Service
metadata:
  name: levelupdevops
spec:
  type: NodePort
  selector:
    app: levelupdevops
  ports:
  - port: 5000
    targetPort: 5000
