manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: levelupdevops
  labels:
    name: levelupdevops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - levelupdevops.AKS_URL
    secretName: tls-secret
  rules:
  - host: levelupdevops.AKS_URL
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: levelupdevops
            port:
              number: 5000
